--- a/alpay/package.json
+++ b/alpay/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "0.9.5"
+    "react-redux": "^7.2.0",
+    "react-scripts": "0.9.5",
+    "redux-form": "^8.3.0"
   },
   "devDependencies": {},
   "scripts": {
